# infretis

./: install.md  pyproject.toml
examples/gromacs/salt_1w/: out.txt  retis.rst
examples/gromacs/salt_data/gromacs_input/: pyretis.mdp  topol.tpr
examples/internal/wf-norestart/: clean.sh  fakeretis.rst  infretis.toml  retis.rst  script.sh
examples/internal/wf-norestart/bkptrajs/0/: ensemble.restart
examples/internal/wf-norestart/bkptrajs/1/: ensemble.restart
examples/internal/wf-norestart/bkptrajs/10/: ensemble.restart
examples/internal/wf-norestart/bkptrajs/11/: ensemble.restart
examples/internal/wf-norestart/bkptrajs/13/: ensemble.restart
examples/internal/wf-norestart/bkptrajs/2/: ensemble.restart
infretis/: bin.py  common.py  conv_inf_py.py  inf_core.py  scheduler.py  setup.py
infretis/classes/: formatter.py  path.py  repex.py
infretis/classes/engines/: ase_engine.py  cp2k.py
infretis/core/: tis.py
infretis/tools/: genload-sorted.py  get-interfaces.py  move.sh
test/engines/: test_velocity_functions.py
test/examples/internal/: test_internal_1.py
test/examples/internal/data/: sh20steps.toml  sh40steps.toml  sh60steps.toml  wf20steps.toml  wf40steps.toml  wf60steps.toml
test/permanents/: easy_swap.py  test_permanents.py
test/repex/: test_repex.py
test/setup/: test_setup.py
test/simulations/: test_run_infretis.py
test/simulations/data/: wf.toml
test/simulations/data/10steps_wf/: restart.toml
test/simulations/data/20steps_wf/: restart.toml
test/simulations/data/30steps_wf/: restart.toml
(+11 files in other folders)
